--- a/portfolio.html
+++ b/portfolio.html
@@ -5,213 +5,196 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Портфолио</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/styles.css" />
+  <title>Портфолио</title>
 </head>
 
 <body>
 
-  <!-- Header section -->
+  <!---------- Header section ---------->
 
-  <header class="header">
-    <div class="container nav-flex">
-      <nav class="header-nav">
-        <a class="logo link" href="./index.html">Web<span class="logo-black">Studio</span></a>
-        <ul class="header-nav-list list">
-          <li class="header-nav-item">
-            <a class="header-nav-link link " href="./index.html">Студия</a>
-          </li>
-          <li class="header-nav-item">
-            <a class="header-nav-link link current" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="header-nav-item">
-            <a class="header-nav-link link" href="">Контакты</a>
-          </li>
+  <header class="site-header">
+    <div class="container header">
+      <a href="index.html" class="logo"> <span class="logo-item">Web</span>Studio</a>
+
+      <!---------- Nav section ---------->
+
+      <nav>
+        <ul class="nav">
+          <li><a href="index.html" class="nav-link">Студия</a></li>
+          <li><a href="portfolio.html" class="nav-link current">Портфолио</a></li>
+          <li><a href="#contact" class="nav-link">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="header-contact-list list">
-        <li class="header-contact-item">
-          <a class="header-contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li class="header-contact-item">
-          <a class="header-contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
+      <ul class="contact-list">
+        <li><a href="mailto:info@devstudio.com" class="link-contact"><svg class="contact-icon" width="16" height="12">
+              <use href="./images/icons.svg#icon-envelope"></use>
+            </svg>info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="link-contact"><svg class="contact-icon" width="10" height="16">
+              <use href="./images/icons.svg#icon-mobile"></use>
+            </svg>+38 096 111 11 11</a></li>
       </ul>
     </div>
   </header>
 
-  <!-- Main section -->
+  <!---------- Main section ---------->
 
   <main>
 
-    <section class="portfolio-section">
+    <!--- Galery section --->
+
+    <section class="section projects">
       <div class="container">
-        <h1 hidden>Примеры работ</h1>
-        <ul class="portfolio-btn-list list">
-          <li class="portfolio-btn-item">
-            <button class="portfolio-btn" type="button">Все</button>
+        <h1 class="visually-hidden">Галерея проектов</h1>
+        <ul class="button-menu">
+          <li><button type="button" class="button">Все</button></li>
+          <li><button type="button" class="button">Веб-сайты</button></li>
+          <li><button type="button" class="button">Приложения</button></li>
+          <li><button type="button" class="button">Дизайн</button></li>
+          <li><button type="button" class="button">Маркетинг</button></li>
+        </ul>
+        <ul class="pr-list">
+          <li class="pr-item">
+            <a href=""><img src="./images/project1.jpg" alt="ноутбук" />
+              <div class="pr-text">
+                <h2 class="pr-title">Технокряк</h2>
+                <p class="pr-desc">Веб-сайт</p>
+              </div>
+            </a>
           </li>
-          <li class="portfolio-btn-item">
-            <button class="portfolio-btn" type="button">Веб-сайты</button>
+          <li class="pr-item">
+            <a href=""><img src="./images/project2.jpg" alt="баскетбольный постер" />
+              <div class="pr-text">
+                <h2 class="pr-title">Постер New Orlean vs Golden Star</h2>
+                <p class="pr-desc">Дизайн</p>
+              </div>
+            </a>
           </li>
-          <li class="portfolio-btn-item">
-            <button class="portfolio-btn" type="button">Приложения</button>
+          <li class="pr-item">
+            <a href=""><img src="./images/project3.jpg" alt="логотип ресторана" />
+              <div class="pr-text">
+                <h2 class="pr-title">Ресторан Seafood</h2>
+                <p class="pr-desc">Приложение</p>
+              </div>
+            </a>
           </li>
-          <li class="portfolio-btn-item">
-            <button class="portfolio-btn" type="button">Дизайн</button>
+          <li class="pr-item">
+            <a href=""><img src="./images/project4.jpg" alt="наушники" />
+              <div class="pr-text">
+                <h2 class="pr-title">Проект Prime</h2>
+                <p class="pr-desc">Маркетинг</p>
+              </div>
+            </a>
           </li>
-          <li class="portfolio-btn-item">
-            <button class="portfolio-btn" type="button">Маркетинг</button>
+          <li class="pr-item">
+            <a href=""><img src="./images/project5.jpg" alt="две коробки" />
+              <div class="pr-text">
+                <h2 class="pr-title">Проект Boxes</h2>
+                <p class="pr-desc">Приложение</p>
+              </div>
+            </a>
+          </li>
+          <li class="pr-item">
+            <a href=""><img src="./images/project6.jpg" alt="дэсктоп" />
+              <div class="pr-text">
+                <h2 class="pr-title">Inspiration has no borders</h2>
+                <p class="pr-desc">Веб-сайт</p>
+              </div>
+            </a>
+          </li>
+          <li class="pr-item">
+            <a href=""><img src="./images/project7.jpg" alt="книга" />
+              <div class="pr-text">
+                <h2 class="pr-title">Издание Limited Edition</h2>
+                <p class="pr-desc">Дизайн</p>
+              </div>
+            </a>
+          </li>
+          <li class="pr-item">
+            <a href=""><img src="./images/project8.jpg" alt="бирка" />
+              <div class="pr-text">
+                <h2 class="pr-title">Проект LAB</h2>
+                <p class="pr-desc">Маркетинг</p>
+              </div>
+            </a>
+          </li>
+          <li class="pr-item">
+            <a href=""><img src="./images/project9.jpg" alt="лэптоп" />
+              <div class="pr-text">
+                <h2 class="pr-title">Growing Business</h2>
+                <p class="pr-desc">Приложение</p>
+              </div>
+            </a>
           </li>
         </ul>
       </div>
-      <div class="container">
-        <ul class="portfolio-list list">
-          <li class="portfolio-item">
-            <img src="./images/tehno.jpg" alt="открытый ноутбук с сайтом Технокряк" width="370" height="294" />
-            <div class="portfolio-border">
-              <h2 class="portfolio-list-title">Технокряк</h2>
-              <p class="portfolio-list-text">Веб-сайт</p>
-            </div>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/poster.jpg" alt="парни играют в баскетбол" width="370" height="294" />
-            <div class="portfolio-border">
-              <h2 class="portfolio-list-title">
-                Постер <span lang="en">New Orlean vs Golden Star</span>
-              </h2>
-              <p class="portfolio-list-text">Дизайн</p>
-            </div>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/seafood.jpg" alt="логотип ресторана Seafood" width="370" height="294" />
-            <div class="portfolio-border">
-              <h2 class="portfolio-list-title">Ресторан <span lang="en">Seafood</span></h2>
-              <p class="portfolio-list-text">Приложение</p>
-            </div>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/prime.jpg" alt="наушники" width="370" height="294" />
-            <div class="portfolio-border">
-              <h2 class="portfolio-list-title">Проект <span lang="en">Prime</span></h2>
-              <p class="portfolio-list-text">Маркетинг</p>
-            </div>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/boxes.jpg" alt="две коробки" width="370" height="294" />
-            <div class="portfolio-border">
-              <h2 class="portfolio-list-title">Проект <span lang="en">Boxes</span></h2>
-              <p class="portfolio-list-text">Приложение</p>
-            </div>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/monitor.jpg" alt="компьютерный монитор" width="370" height="294" />
-            <div class="portfolio-border">
-              <h2 class="portfolio-list-title"><span lang="en">Inspiration has no Borders</span></h2>
-              <p class="portfolio-list-text">Веб-сайт</p>
-            </div>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/limited.jpg" alt="открытый журнал" width="370" height="294" />
-            <div class="portfolio-border">
-              <h2 class="portfolio-list-title">Издание <span lang="en">Limited Edition</span></h2>
-              <p class="portfolio-list-text">Дизайн</p>
-            </div>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/lab.jpg" alt="этикетка LAB" width="370" height="294" />
-            <div class="portfolio-border">
-              <h2 class="portfolio-list-title">Проект <span lang="en">LAB</span></h2>
-              <p class="portfolio-list-text">Маркетинг</p>
-            </div>
-          </li>
-          <li class="portfolio-item border">
-            <img src="./images/growing.jpg" alt="человек работает на макбуке" width="370" height="294" />
-            <div class="portfolio-border">
-              <h2 class="portfolio-list-title"><span lang="en">Growing Business</span></h2>
-              <p class="portfolio-list-text">Приложение</p>
-            </div>
-          </li>
-        </ul>
-      </div>
-
-
-      <!-- <div class="portfolio-bottom">
-          <h2 hidden>Костыль для выравнивания блоков секции, чтобы он не заезжал на футер, когда будет добавлен фон</h2>
-        </div> -->
-
-
     </section>
   </main>
 
-  <!-- Footer section -->
+  <!---------- Footer section ---------->
 
   <footer class="footer">
-    <div class="container">
-      <div class="footer-flex">
-        <div class="footer-contacts-flex">
-          <a class="logo link" href="./index.html">Web<span class="logo-white">Studio</span>
-          </a>
+    <div class="container aside">
+      <aside>
+        <a href="index.html" class="footer-logo"><span class="logo-item">Web</span>Studio</a>
 
-          <!-- Contacts selection -->
+        <!---------- Contacts section ---------->
 
-          <address class="footer-contact">
-            <ul class="footer-contact-list list">
-              <li class="footer-contact-item">
-                <a class="footer-contact-link address link" href="https://goo.gl/maps/CdvJLRiEL6Q8Smko8" target="_blank"
-                  rel="noreferrer noopener">г.Киев, пр-т Леси Украинки, 26</a>
-              </li>
-              <li class="footer-contact-item">
-                <a class="footer-contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-              </li>
-              <li class="footer-contact-item">
-                <a class="footer-contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
-              </li>
-            </ul>
-          </address>
-        </div>
-        <div class="footer-social-flex">
-          <p class="footer-social-text">Присоединяйтесь</p>
-          <ul class="footer-social-list list">
-            <li class="footer-social-item">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
+        <address id="contact">
+          <ul>
+            <li class="li-address">
+              <a href="https://goo.gl/maps/FoHEAQYZBGtC9JvY6" target="_blank" rel="noopener nofollow noreferrer"
+                class="address-link">г. Киев, бул. Леси Украинки, 26</a>
             </li>
-
-            <li class="footer-social-item">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
+            <li class="li-contact">
+              <a href="mailto:info@example.com" class="address-contact">info@example.com</a>
             </li>
-
-            <li class="footer-social-item">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-
-            <li class="footer-social-item">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
+            <li class="li-contact">
+              <a href="tel:+380991111111" class="address-contact">+38 099 111 11 11</a>
             </li>
           </ul>
-        </div>
-      </div>
+        </address>
+      </aside>
+      <aside class="social-media">
+        <p>Присоединяйтесь</p>
+        <ul class="media-list">
+          <li>
+            <a href="" class="media-link">
+              <svg class="footer-icon" width="20px" height="20">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="media-link">
+              <svg class="footer-icon" width="20px" height="20">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="media-link">
+              <svg class="footer-icon" width="20px" height="20">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="media-link">
+              <svg class="footer-icon" width="20px" height="20">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </aside>
     </div>
   </footer>
 </body>
