--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/styles.css" />
-  <title>Веб Студия</title>
+  <title>goit-markup-hw-04</title>
 </head>
 
 <body>
