--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
   <footer class="footer">
     <div class="container aside">
-      <aside>
+      <div>
         <a href="index.html" class="footer-logo"><span class="logo-item">Web</span>Studio</a>
 
         <!---------- Contacts section ---------->
@@ -354,8 +354,8 @@
             </li>
           </ul>
         </address>
-      </aside>
-      <aside class="social-media">
+      </div>
+      <div class="social-media">
         <p>Присоединяйтесь</p>
         <ul class="media-list">
           <li>
@@ -387,7 +387,7 @@
             </a>
           </li>
         </ul>
-      </aside>
+      </div>
     </div>
   </footer>
 </body>
