--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
         </ul>
         <ul class="pr-list">
           <li class="pr-item">
-            <a href=""><img src="./images/project1.jpg" alt="ноутбук" />
+            <a href="" class="pr-link"><img src="./images/project1.jpg" alt="ноутбук" />
               <div class="pr-text">
                 <h2 class="pr-title">Технокряк</h2>
                 <p class="pr-desc">Веб-сайт</p>
