fix hover  focus a

--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
             </a>
           </li>
           <li class="pr-item">
-            <a href=""><img src="./images/project2.jpg" alt="баскетбольный постер" />
+            <a href="" class="pr-link"><img src="./images/project2.jpg" alt="баскетбольный постер" />
               <div class="pr-text">
                 <h2 class="pr-title">Постер New Orlean vs Golden Star</h2>
                 <p class="pr-desc">Дизайн</p>
@@ -78,7 +78,7 @@
             </a>
           </li>
           <li class="pr-item">
-            <a href=""><img src="./images/project3.jpg" alt="логотип ресторана" />
+            <a href="" class="pr-link"><img src="./images/project3.jpg" alt="логотип ресторана" />
               <div class="pr-text">
                 <h2 class="pr-title">Ресторан Seafood</h2>
                 <p class="pr-desc">Приложение</p>
@@ -86,7 +86,7 @@
             </a>
           </li>
           <li class="pr-item">
-            <a href=""><img src="./images/project4.jpg" alt="наушники" />
+            <a href="" class="pr-link"><img src="./images/project4.jpg" alt="наушники" />
               <div class="pr-text">
                 <h2 class="pr-title">Проект Prime</h2>
                 <p class="pr-desc">Маркетинг</p>
@@ -94,7 +94,7 @@
             </a>
           </li>
           <li class="pr-item">
-            <a href=""><img src="./images/project5.jpg" alt="две коробки" />
+            <a href="" class="pr-link"><img src="./images/project5.jpg" alt="две коробки" />
               <div class="pr-text">
                 <h2 class="pr-title">Проект Boxes</h2>
                 <p class="pr-desc">Приложение</p>
@@ -102,7 +102,7 @@
             </a>
           </li>
           <li class="pr-item">
-            <a href=""><img src="./images/project6.jpg" alt="дэсктоп" />
+            <a href="" class="pr-link"><img src="./images/project6.jpg" alt="дэсктоп" />
               <div class="pr-text">
                 <h2 class="pr-title">Inspiration has no borders</h2>
                 <p class="pr-desc">Веб-сайт</p>
@@ -110,7 +110,7 @@
             </a>
           </li>
           <li class="pr-item">
-            <a href=""><img src="./images/project7.jpg" alt="книга" />
+            <a href="" class="pr-link"><img src="./images/project7.jpg" alt="книга" />
               <div class="pr-text">
                 <h2 class="pr-title">Издание Limited Edition</h2>
                 <p class="pr-desc">Дизайн</p>
@@ -118,7 +118,7 @@
             </a>
           </li>
           <li class="pr-item">
-            <a href=""><img src="./images/project8.jpg" alt="бирка" />
+            <a href="" class="pr-link"><img src="./images/project8.jpg" alt="бирка" />
               <div class="pr-text">
                 <h2 class="pr-title">Проект LAB</h2>
                 <p class="pr-desc">Маркетинг</p>
@@ -126,7 +126,7 @@
             </a>
           </li>
           <li class="pr-item">
-            <a href=""><img src="./images/project9.jpg" alt="лэптоп" />
+            <a href="" class="pr-link"><img src="./images/project9.jpg" alt="лэптоп" />
               <div class="pr-text">
                 <h2 class="pr-title">Growing Business</h2>
                 <p class="pr-desc">Приложение</p>
